fixed font sizing on smaller screens

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    scrollbar-width: thin;
+    scrollbar-color: var(--text-color) var(--back-color);
   }
   :root {
     --back-color: #0e0e0e;
@@ -15,7 +17,7 @@
     --corner-radius: .75rem;
     --gap: 1rem;
     --gap-big: 1.5rem;
-    font-size: 16px;
+    font-size: 12px;
 }
 ::-moz-selection {
     color: var(--back-color);
@@ -101,7 +103,7 @@ hr {
   background: transparent;
   backdrop-filter: blur(20px);
   color: var(--primary-color);
-  padding: .5rem;
+  padding: .75rem;
   border: var(--border);
   border-radius: var(--corner-radius);
   padding-inline: var(--gap);
@@ -273,7 +275,7 @@ hr {
 }
 .marquee h1 {
     margin-block: 1rem;
-    font-size: 6rem;
+    font-size: 3rem;
     white-space: nowrap;
     text-transform: uppercase;
 }
@@ -298,7 +300,7 @@ body::before {
 .loader {
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
-    height: 40px;
+    height: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -361,6 +363,8 @@ body::before {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin-block: 2rem;
+  margin-inline: 1rem;
 }
 #about .aboutDesc {
   color: #cccccc;
